--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "rollup-plugin-uglify-es": "0.0.1"
   },
   "dependencies": {
+    "express": "^4.16.4",
     "hyperhtml": "^2.13.0"
   },
   "jest": {
